fixing button on mobile

--- a/style.css
+++ b/style.css
@@ -8,14 +8,12 @@
 }
 
 .all-content {
-  background-color: #121111;
   display: grid;
   grid-template-columns: 3% 49% 48%;
   grid-template-rows: 1fr;
 }
 
 .projects-body {
-  background-color: #121111;
   display: grid;
   grid-template-columns: 3% 49% 48%;
   grid-template-rows: 1fr 1fr;
@@ -99,14 +97,12 @@ h2 {
 }
 
 .skills-body {
-  background-color: #121111;
   display: grid;
   grid-template-columns: 3% 33% 32% 32%;
   grid-template-rows: 1fr;
 }
 
 .projects-main-container {
-  background-color: #121111;
   display: grid;
   width: 100%;
   height: 100%;
@@ -122,7 +118,6 @@ h2 {
 }
 
 .skills-main-container, .contact-main-container {
-  background-color: #121111;
   display: grid;
   width: 100%;
   height: 100%;
@@ -352,7 +347,7 @@ button:hover {
     margin-top: 10%;
   }
 
-  button {
+  .contact-button {
     margin-top: 10%;
     width: 25%;
     height: 50%;
